# eagle-eye

./: Cargo.toml  LICENSE  README.md  config.toml.dist
src/: config.rs  files_watcher.rs  main.rs
src/actions/: command.rs  mod.rs  print.rs
