[package]
name = "eagle"
version = "0.2.0"
authors = ["Adam Goforth <code@adamgoforth.com>"]
license = "MIT"
edition = "2021"

[dependencies]
notify = "7.0.0"
libc = "0.2.167"
rand = "0.8.5"
serde = "1.0.215"
serde_derive = "1.0.215"
toml = "0.8.19"
clap = { version = "4.5.21", features = ["derive"] }

